--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>4b02b3aa-9037-4a8e-832f-9776959262ac</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Secure Access Hub - Multi-Factor Authentication</title>
+    <meta name="description" content="Secure Access Hub - Multi-Factor Authentication and Access Control System" />
+    <meta name="author" content="Secure Access Hub" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
 
-    <meta property="og:title" content="4b02b3aa-9037-4a8e-832f-9776959262ac" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Secure Access Hub - Multi-Factor Authentication" />
+    <meta property="og:description" content="Secure Access Hub - Multi-Factor Authentication and Access Control System" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
