--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Secure Access Hub - Multi-Factor Authentication</title>
-    <meta name="description" content="Secure Access Hub - Multi-Factor Authentication and Access Control System" />
-    <meta name="author" content="Secure Access Hub" />
+    <title>SecureAuth - Multi-Factor Authentication</title>
+    <meta name="description" content="SecureAuth - Multi-Factor Authentication and Access Control System" />
+    <meta name="author" content="SecureAuth" />
     
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
 
-    <meta property="og:title" content="Secure Access Hub - Multi-Factor Authentication" />
-    <meta property="og:description" content="Secure Access Hub - Multi-Factor Authentication and Access Control System" />
+    <meta property="og:title" content="SecureAuth - Multi-Factor Authentication" />
+    <meta property="og:description" content="SecureAuth - Multi-Factor Authentication and Access Control System" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
